# image_manager_v2

./: .gitignore  Cargo.toml
proc/: Cargo.toml
proc/src/: lib.rs
src/: app.rs  debug.rs  images.rs  layout.rs  main.rs  shipyard_tools.rs  storage.rs  tools.rs  window.rs
src/renderer/: camera.rs  circle_pipeline.rs  circle_shader.wgsl  gif.rs  gif2d_pipeline.rs  gif2d_shader.wgsl  mod.rs  shared.rs  text.rs  text_pipeline.rs  texture.rs  texture2d_pipeline.rs  texture_pipeline.rs  texture_shader.wgsl  tools.rs
