[package]
name = "image_manager_v2"
version = "0.1.0"
edition = "2021"


[dependencies]
ahash = "0.8.11"
bytemuck = { version = "1.17.1", features = ["derive"] }
crossbeam-channel = "0.5.13"
env_logger = "0.11.5"
glam = "0.29.0"
image = { version = "0.25.2", features = ["gif"] }
log = "0.4.22"
shipyard = "0.7.1"
cabat.git = "http://192.168.68.104:3000/BrackenLo/cabat.git"
wgpu = "22.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
